Update: main - Diff report completed

--- a/diff_core_test.html
+++ b/diff_core_test.html
@@ -15681,7 +15681,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>31</del>.<del>0a3</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>31</del>.<del>0a5</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -15714,7 +15714,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>plugwise==0</del>.<del>25</del>.<del>2a0</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;9f&#x2F;29&#x2F;dcb8b70c6b1068f2f6574acdca3377988696b2f53f94afe4e151dda9f712&#x2F;plugwise-0</del>.<del>25.3a0.tar.gz#plugwise==0.25.3a0</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -15780,7 +15780,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>zeroconf</ins>&quot;: [&quot;<ins>_plugwise</ins>.<ins>_tcp</ins>.<ins>local.</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>zeroconf</ins>&quot;: [&quot;<ins>_plugwise</ins>.<ins>_tcp</ins>.<ins>local</ins>.&quot;],</span>
         </div>
     </td>
 </tr><tr>
