Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
+                        <li><a href='diff_pw_25_5.html'>Unified diff core:dev vs beta:origin/pw_25_5</a></li>
+
                         <li><a href='diff_refact_usb_for_core_2021_8.html'>Unified diff core:dev vs beta:origin/refact_usb_for_core_2021_8</a></li>
 
                         <li><a href='diff_regulation_mode.html'>Unified diff core:dev vs beta:origin/regulation_mode</a></li>
