--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
                         <li><a href='diff_fix_250.html'>Unified diff core:dev vs beta:origin/fix_250</a></li>
 
+                        <li><a href='diff_hassfest.html'>Unified diff core:dev vs beta:origin/hassfest</a></li>
+
                         <li><a href='diff_homekit.html'>Unified diff core:dev vs beta:origin/homekit</a></li>
 
                         <li><a href='diff_huub66.html'>Unified diff core:dev vs beta:origin/huub66</a></li>
