--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
                         <li><a href='diff_p1-3ph.html'>Unified diff core:dev vs beta:origin/p1-3ph</a></li>
 
+                        <li><a href='diff_pw_0_25_11.html'>Unified diff core:dev vs beta:origin/pw_0_25_11</a></li>
+
                         <li><a href='diff_pw_25_5.html'>Unified diff core:dev vs beta:origin/pw_25_5</a></li>
 
                         <li><a href='diff_refact_usb_for_core_2021_8.html'>Unified diff core:dev vs beta:origin/refact_usb_for_core_2021_8</a></li>
