Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
                         <li><a href='diff_huub66.html'>Unified diff core:dev vs beta:origin/huub66</a></li>
 
+                        <li><a href='diff_huub66_test.html'>Unified diff core:dev vs beta:origin/huub66_test</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_p1-3ph.html'>Unified diff core:dev vs beta:origin/p1-3ph</a></li>
