--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
                         <li><a href='diff_add_typing.html'>Unified diff core:dev vs beta:origin/add_typing</a></li>
 
+                        <li><a href='diff_cf_improve.html'>Unified diff core:dev vs beta:origin/cf_improve</a></li>
+
                         <li><a href='diff_cf_reauth.html'>Unified diff core:dev vs beta:origin/cf_reauth</a></li>
 
                         <li><a href='diff_core_22_12.html'>Unified diff core:dev vs beta:origin/core_22_12</a></li>
