--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
                         <li><a href='diff_device_availability.html'>Unified diff core:dev vs beta:origin/device_availability</a></li>
 
+                        <li><a href='diff_elga.html'>Unified diff core:dev vs beta:origin/elga</a></li>
+
                         <li><a href='diff_fix_250.html'>Unified diff core:dev vs beta:origin/fix_250</a></li>
 
                         <li><a href='diff_hassfest.html'>Unified diff core:dev vs beta:origin/hassfest</a></li>
