--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
                         <li><a href='diff_correct_climate.html'>Unified diff core:dev vs beta:origin/correct_climate</a></li>
 
+                        <li><a href='diff_dependabot/github_actions/actions/checkout-3.2.0.html'>Unified diff core:dev vs beta:origin/dependabot/github_actions/actions/checkout-3.2.0</a></li>
+
                         <li><a href='diff_device_availability.html'>Unified diff core:dev vs beta:origin/device_availability</a></li>
 
                         <li><a href='diff_elga.html'>Unified diff core:dev vs beta:origin/elga</a></li>
