--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 
                         <li><a href='diff_select_schedule_fix.html'>Unified diff core:dev vs beta:origin/select_schedule_fix</a></li>
 
+                        <li><a href='diff_translations.html'>Unified diff core:dev vs beta:origin/translations</a></li>
+
                         <li><a href='diff_usb_tests.html'>Unified diff core:dev vs beta:origin/usb_tests</a></li>
 
                 </ul>
