Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
                         <li><a href='diff_select_schedule_fix.html'>Unified diff core:dev vs beta:origin/select_schedule_fix</a></li>
 
+                        <li><a href='diff_test-typing.html'>Unified diff core:dev vs beta:origin/test-typing</a></li>
+
                         <li><a href='diff_usb_tests.html'>Unified diff core:dev vs beta:origin/usb_tests</a></li>
 
                 </ul>
