Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
                         <li><a href='diff_correct_climate.html'>Unified diff core:dev vs beta:origin/correct_climate</a></li>
 
+                        <li><a href='diff_debug_local_test.html'>Unified diff core:dev vs beta:origin/debug_local_test</a></li>
+
                         <li><a href='diff_device_availability.html'>Unified diff core:dev vs beta:origin/device_availability</a></li>
 
                         <li><a href='diff_elga.html'>Unified diff core:dev vs beta:origin/elga</a></li>
