Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
                         <li><a href='diff_fix_250.html'>Unified diff core:dev vs beta:origin/fix_250</a></li>
 
+                        <li><a href='diff_fix_test-fail.html'>Unified diff core:dev vs beta:origin/fix_test-fail</a></li>
+
                         <li><a href='diff_hassfest.html'>Unified diff core:dev vs beta:origin/hassfest</a></li>
 
                         <li><a href='diff_homekit.html'>Unified diff core:dev vs beta:origin/homekit</a></li>
