Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
 
                         <li><a href='diff_correct_climate.html'>Unified diff core:dev vs beta:origin/correct_climate</a></li>
 
-                        <li><a href='diff_debug_local_test.html'>Unified diff core:dev vs beta:origin/debug_local_test</a></li>
-
                         <li><a href='diff_device_availability.html'>Unified diff core:dev vs beta:origin/device_availability</a></li>
 
                         <li><a href='diff_elga.html'>Unified diff core:dev vs beta:origin/elga</a></li>
@@ -51,6 +49,8 @@
                         <li><a href='diff_pw_0_25_13.html'>Unified diff core:dev vs beta:origin/pw_0_25_13</a></li>
 
                         <li><a href='diff_pw_25_5.html'>Unified diff core:dev vs beta:origin/pw_25_5</a></li>
+
+                        <li><a href='diff_pw_27_4.html'>Unified diff core:dev vs beta:origin/pw_27_4</a></li>
 
                         <li><a href='diff_refact_usb_for_core_2021_8.html'>Unified diff core:dev vs beta:origin/refact_usb_for_core_2021_8</a></li>
 
