--- a/diff_test-typing.html
+++ b/diff_test-typing.html
@@ -16261,7 +16261,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>34</del>.<del>3a0</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>34</del>.<del>4a0</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -16294,7 +16294,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>plugwise==0</del>.<del>27</del>.<del>3</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;af&#x2F;48&#x2F;69532df3335d9b046185d6c1157be9d79568418632da5f01682b846d53a4&#x2F;plugwise-0</del>.<del>28.0a1.tar.gz#plugwise==0.28.0a1</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -16382,7 +16382,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>zeroconf</ins>&quot;: [&quot;<ins>_plugwise</ins>.<ins>_tcp</ins>.<ins>local.</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>zeroconf</ins>&quot;: [&quot;<ins>_plugwise</ins>.<ins>_tcp</ins>.<ins>local</ins>.&quot;],</span>
         </div>
     </td>
 </tr><tr>
